--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="resources/css/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="resources/css/app/app.css" />
 
     <title>Trinus - Pide un Taxi ... y tu vida cambiará</title>
 </head>
