integracion de google maps

--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
 </html>
 <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.0-gpl/ext-all-debug.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
+<!--<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true"></script>-->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCl845Pf-MakhzYZ_f2YS2f2VnWdD6Hax8&sensor=true"></script>
