[ODLG] Se corrigieron layouts de pantalla principal y se agrego el boton de salir.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html manifest="" lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="resources/css/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="http://cdn.sencha.io/ext-4.1.0-gpl/resources/css/ext-all.css" />
+    <!--<link rel="stylesheet" href="resources/css/bootstrap/bootstrap.css" />-->
     <link rel="stylesheet" href="resources/css/app/app.css" />
 
     <title>Trinus - Pide un Taxi ... y tu vida cambiará</title>
