--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <!--<link rel="stylesheet" href="http://cdn.sencha.io/ext-4.1.0-gpl/resources/css/ext-all.css" />-->
-    <link rel="stylesheet" href="resources/css/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="resources/css/app/app.css" />
+    <link rel="stylesheet" href="resources/css/bootstrap/bootstrap.css"/>
+    <link rel="stylesheet" href="resources/css/app/app.css"/>
 
     <title>Trinus - Pide un Taxi ... y tu vida cambiará</title>
 </head>
 <body></body>
 </html>
+<script type="text/javascript">
+    window.onbeforeunload = confirmExit;
+    function confirmExit() {
+        return "Ha intentado salir de esta pagina. Si ha realizado alguna petiión de servicio, la petición se perdera. Seguro que desea salir de esta pagina? ";
+    }
+</script>
 <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.0-gpl/ext-all-debug.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
 <!--<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true"></script>-->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCl845Pf-MakhzYZ_f2YS2f2VnWdD6Hax8&sensor=true"></script>
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCl845Pf-MakhzYZ_f2YS2f2VnWdD6Hax8&sensor=true&libraries=places"></script>
