[LEMG] Se cambian rutas para nuevo api

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body></body>
 </html>
 <script type="text/javascript">
-    window.onbeforeunload = confirmExit;
+    /*window.onbeforeunload = confirmExit;
     function confirmExit() {
         return "Ha intentado salir de esta pagina. Si ha realizado alguna petiión de servicio, la petición se perdera. Seguro que desea salir de esta pagina? ";
-    }
+    }*/
 </script>
 <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.0-gpl/ext-all-debug.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
